# zed-pylsp

./: Cargo.toml  README.md  extension.toml
src/: lib.rs
