[package]
name = "zed-pylsp"
version = "0.0.1"
authors = ["Erick Duarte <erickod@gmail.com.com>"]
license = "Apache-2.0"
description = "Zed extension adding PyLSP support"
keywords = ["zed", "vale"]
categories = ["development-tools"]
homepage = "https://github.com/erickod/zed-pylsp"
repository = "https://github.com/erickod/zed-pylsp"
readme = "README.md"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"
